--- a/ChurchMap.Rmd
+++ b/ChurchMap.Rmd
@@ -16,6 +16,8 @@ library(readr)
 library(knitr)
 Religious_Buildings <- read_csv("~/Religious_Buildings.csv")
 head (Religious_Buildings)
+head (Religious_Buildings) #T=Up to this code works, below works in console, 
+#needs df to be read in order for code to work or recode coordinates into DF
 library(ggmap)
 library (ggplot2)
 geocode("Baltimore")
