--- a/ChurchMap.Rmd
+++ b/ChurchMap.Rmd
@@ -1,16 +1,9 @@
 ---
-title: "Untitled"
+title: "Baltimore Religious Buildings"
 author: "nana"
 date: "April 27, 2017"
 output: html_document
 ---
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
 ```{r churches}
 library(readr)
 library(knitr)
@@ -19,14 +12,16 @@ head (Religious_Buildings)
 head (Religious_Buildings) #T=Up to this code works, below works in console, 
 #needs df to be read in order for code to work or recode coordinates into DF
 ```
-
+Above is the codechunk needed for importing the Baltimore Religious Buildings csv file.
 ```{r map}
 kable(df)
 head(df)
 ```
+This codechunk reads the dataframe that has all the coordinates of each religious building.
 ```{r Baltimore}
 library(ggmap)
 library (ggplot2)
 geocode("Baltimore")
 qmplot(lon, lat, data = df,colour = I('red'), size = I(1), darken = .3)
 ```
+This codechunk uses ggplot2 and ggmap packages to pull up a map of Baltimore from google and plot all the religious buildings onto the map. Mapping based on building type is not very necessary because there are only two building types, synagogue and church, only about 5% of which are synagogues. Almost all the synagogues are in the same district of 5 or around the same zip code. This map plots all the buildings to see the spread and amount of religious buildings are in the city. 
