--- a/ChurchMap.Rmd
+++ b/ChurchMap.Rmd
@@ -13,15 +13,20 @@ head (Religious_Buildings) #T=Up to this code works, below works in console,
 #needs df to be read in order for code to work or recode coordinates into DF
 ```
 Above is the codechunk needed for importing the Baltimore Religious Buildings csv file.
+
 ```{r map}
-kable(df)
 head(df)
 ```
 This codechunk reads the dataframe that has all the coordinates of each religious building.
 ```{r Baltimore}
 library(ggmap)
 library (ggplot2)
+```
+kable(df)
+{r mapping}
+ggplot(aes(x=lon, y=lat), data=df)
 geocode("Baltimore")
 qmplot(lon, lat, data = df,colour = I('red'), size = I(1), darken = .3)
-```
+
+
 This codechunk uses ggplot2 and ggmap packages to pull up a map of Baltimore from google and plot all the religious buildings onto the map. Mapping based on building type is not very necessary because there are only two building types, synagogue and church, only about 5% of which are synagogues. Almost all the synagogues are in the same district of 5 or around the same zip code. This map plots all the buildings to see the spread and amount of religious buildings are in the city. 
